# hyperclaw

./: .detect-secrets.cfg  .env.example  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.browser  Dockerfile.sandbox  LICENSE  README.md  ROADMAP.md  SECURITY.md  appcast.xml  default.nix  docker-compose.yml  env.example  flake.nix  fly.toml  install.sh  package-lock.json  package.json  pnpm-workspace.yaml  render.yaml  tsconfig.json  tsdown.config.mjs  vitest.channels.config.ts  vitest.config.ts  vitest.e2e.config.ts  vitest.gateway.config.ts  vitest.integration.config.ts  vitest.unit.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  deprecated-apps.txt
apps/macos-menubar/src-tauri/: Cargo.toml  tauri.conf.json
apps/macos-menubar/src-tauri/capabilities/: default.json
apps/macos-menubar/src-tauri/icons/: icon.icns
apps/macos-menubar/src-tauri/src/: lib.rs  main.rs
docs/: API-KEYS-README.md  PACKAGE-STRUCTURE.md  README.md  architecture.md  bluebubbles.md  broadcast-groups.md  browser.md  canvas-a2ui.md  channel-routing.md  configuration-and-operations.md  configuration.md  connect-tab-protocol.md  contributing.md  deployment.md  device-commands.md  discord-setup.md  docs-hubs.md  environment.md  faq.md  gateway-lock.md  gmail-pubsub.md  google-chat.md  group-messages.md  imessage-native.md  integrations.md  line.md  macos-remote-control.md  managed-hosting.md  matrix.md  mcp.md  memory-integration.md  mobile-desktop-apps.md  msteams.md  (+28 more)
docs-site/: README.md  docs.json  intro.mdx
(+291 files in other folders)
