[package]
name = "hyperclaw-menubar"
version = "4.0.2"
description = "HyperClaw macOS menu bar app"
edition = "2021"

[lib]
name = "hyperclaw_menubar_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
